--- a/styles/food.css
+++ b/styles/food.css
@@ -229,6 +229,7 @@ h1 {
     display: none;
 }
 
+
 /* 手機菜單彈窗 */
     .delicious-food .box {
         display: none;
@@ -247,7 +248,7 @@ h1 {
         line-height: 1.5;
         background-image: url(../images/menu_bg.png);
         background-size: cover;
-        padding: 3%;
+        padding: 3% 0;
         border-radius: 6px;
         box-shadow: 0 2px 10px #000;
         text-align: center;
@@ -260,6 +261,11 @@ h1 {
 
     .delicious-food .box .box-content p:first-child{
         font-size: 1.2rem;
+    }
+
+    .delicious-food .box .box-content i span{
+        color: #e00;
+        font-size: 1rem;
     }
 
     .delicious-food .box .close-box{
